feat: created an error mapper and completed the user services and handlers
