# server/internal/handlers/users.go
@@ -1,12 +1,13 @@
 package handlers
 
 import (
+	"errors"
 	"net/http"
-	"time"
 
 	"github.com/gin-gonic/gin"
 	"github.com/puremike/online_auction_api/contexts"
 	"github.com/puremike/online_auction_api/internal/config"
+	"github.com/puremike/online_auction_api/internal/errs"
 	"github.com/puremike/online_auction_api/internal/models"
 	"github.com/puremike/online_auction_api/internal/services"
 )
@@ -60,7 +61,7 @@ func (u *UserHandler) RegisterUser(c *gin.Context) {
 
 	createdUser, err := u.service.CreateUser(c.Request.Context(), user)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "problem registering user"})
+		errs.MapServiceErrors(c, err)
 		return
 	}
 
@@ -70,7 +71,7 @@ func (u *UserHandler) RegisterUser(c *gin.Context) {
 		Email:     createdUser.Email,
 		FullName:  createdUser.FullName,
 		Location:  createdUser.Location,
-		CreatedAt: createdUser.CreatedAt.Format(time.RFC3339),
+		CreatedAt: createdUser.CreatedAt,
 	})
 }
 
@@ -101,7 +102,7 @@ func (u *UserHandler) Login(c *gin.Context) {
 
 	user, err := u.service.Login(c.Request.Context(), &payload)
 	if err != nil {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "invalid credentials"})
+		errs.MapServiceErrors(c, err)
 		return
 	}
 
@@ -120,7 +121,7 @@ func (u *UserHandler) Login(c *gin.Context) {
 //	@Success		200	{object}	gin.H	"Logout successful"
 //	@Router			/logout [post]
 //
-// @Security		jwtCookieAuth
+//	@Security		jwtCookieAuth
 func (u *UserHandler) Logout(c *gin.Context) {
 	c.SetCookie("jwt", "", -1, "/", "", false, true)
 	c.SetCookie("refresh_token", "", -1, "/", "", false, true)
@@ -152,7 +153,7 @@ func (u *UserHandler) RefreshToken(c *gin.Context) {
 
 	newToken, err := u.service.Refresh(c.Request.Context(), refreshToken)
 	if err != nil {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "invalid or expired refresh token"})
+		errs.MapServiceErrors(c, err)
 		return
 	}
 
@@ -169,15 +170,15 @@ func (u *UserHandler) RefreshToken(c *gin.Context) {
 //	@Description	Access token must be provided as an `HttpOnly` cookie named `jwt`.
 //	@Tags			Users
 //	@Accept			json
-//	@Param			username	path		string	true	"Username of the user to retrieve profile for"
+//	@Param			username	path	string	true	"Username of the user to retrieve profile for"
 //	@Produce		json
-//	@Success		200			{object}	models.UserResponse
-//	@Failure		401			{object}	gin.H	"Unauthorized - invalid or expired token"
-//	@Failure		404			{object}	gin.H	"User not found"
-//	@Failure		500			{object}	gin.H	"Internal Server Error"
+//	@Success		200	{object}	models.UserResponse
+//	@Failure		401	{object}	gin.H	"Unauthorized - invalid or expired token"
+//	@Failure		404	{object}	gin.H	"User not found"
+//	@Failure		500	{object}	gin.H	"Internal Server Error"
 //	@Router			/{username} [get]
 //
-// @Security		jwtCookieAuth
+//	@Security		jwtCookieAuth
 func (u *UserHandler) UserProfile(c *gin.Context) {
 
 	authUser := contexts.GetUserFromContext(c)
@@ -194,7 +195,7 @@ func (u *UserHandler) UserProfile(c *gin.Context) {
 
 	user, err := u.service.UserProfile(c.Request.Context(), username)
 	if err != nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
+		errs.MapServiceErrors(c, err)
 		return
 	}
 
@@ -207,4 +208,131 @@ func (u *UserHandler) UserProfile(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, res)
+}
+
+// UpdateProfile godoc
+//
+//	@Summary		Update user profile
+//	@Description	Allows an authenticated user to update their profile details such as username, email, full name, and location.
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload		body		models.UserProfileUpdateRequest	true	"Profile update payload"
+//	@Param			username	path		string							true	"Username of the user to update profile for"
+//	@Success		201			{object}	string	"Profile updated successfully"
+//	@Failure		400			{object}	gin.H	"Bad Request - invalid input"
+//	@Failure		401			{object}	gin.H	"Unauthorized - user not authenticated"
+//	@Failure		500			{object}	gin.H	"Internal Server Error - failed to update profile"
+//	@Router			/{username}/update-profile [put]
+//
+//	@Security		jwtCookieAuth
+func (u *UserHandler) UpdateProfile(c *gin.Context) {
+
+	var payload models.UserProfileUpdateRequest
+	if err := c.ShouldBindJSON(&payload); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	authUser := contexts.GetUserFromContext(c)
+	if authUser == nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "unauthorized"})
+		return
+	}
+
+	username := c.Param("username")
+	if username == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "username is required"})
+		return
+	}
+
+	currentUser, err := u.app.Store.Users.GetUserByUsername(c.Request.Context(), username)
+	if err != nil {
+		if errors.Is(err, errs.ErrUserNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to retrieve user"})
+		return
+	}
+
+	if authUser.ID != currentUser.ID {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "unauthorized to update this profile"})
+		return
+	}
+
+	user := &models.User{
+		Username: payload.Username,
+		Email:    payload.Email,
+		FullName: payload.FullName,
+		Location: payload.Location,
+	}
+
+	msg, err := u.service.UpdateProfile(c.Request.Context(), user, authUser.ID)
+	if err != nil {
+		errs.MapServiceErrors(c, err)
+		return
+	}
+
+	c.JSON(http.StatusCreated, msg)
+}
+
+// ChangePassword godoc
+//
+//	@Summary		Change User Password
+//	@Description	Allows an authenticated user to change their password.
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload		body		models.PasswordUpdateRequest	true	"Password update payload"
+//	@Param			username	path		string							true	"Username of the user to change password for"
+//	@Success		201			{object}	string	"Password changed successfully"
+//	@Failure		400			{object}	gin.H	"Bad Request - invalid input"
+//	@Failure		401			{object}	gin.H	"Unauthorized - user not authenticated"
+//	@Failure		500			{object}	gin.H	"Internal Server Error - failed to change password"
+//	@Router			/{username}/change-password [put]
+//
+//	@Security		jwtCookieAuth
+func (u *UserHandler) ChangePassword(c *gin.Context) {
+
+	var payload models.PasswordUpdateRequest
+	if err := c.ShouldBindJSON(&payload); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	authUser := contexts.GetUserFromContext(c)
+	if authUser == nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "unauthorized"})
+		return
+	}
+
+	username := c.Param("username")
+	if username == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "username is required"})
+		return
+	}
+
+	currentUser, err := u.app.Store.Users.GetUserByUsername(c.Request.Context(), username)
+	if err != nil {
+		if errors.Is(err, errs.ErrUserNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to retrieve user"})
+		return
+	}
+
+	if authUser.ID != currentUser.ID {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "unauthorized to update this profile"})
+		return
+	}
+
+	msg, err := u.service.ChangePassword(c.Request.Context(), &payload, authUser.ID)
+	if err != nil {
+		errs.MapServiceErrors(c, err)
+		return
+	}
+
+	c.JSON(http.StatusCreated, msg)
 }
