# server/internal/services/user.go
@@ -8,6 +8,7 @@ import (
 
 	"github.com/golang-jwt/jwt/v5"
 	"github.com/puremike/online_auction_api/internal/config"
+	"github.com/puremike/online_auction_api/internal/errs"
 	"github.com/puremike/online_auction_api/internal/models"
 	"github.com/puremike/online_auction_api/internal/store"
 	"github.com/puremike/online_auction_api/internal/utils"
@@ -25,44 +26,61 @@ func NewUserService(repo store.UserRepository, app *config.Application) *UserSer
 	}
 }
 
-func (u *UserService) CreateUser(ctx context.Context, user *models.User) (*models.User, error) {
+const QueryDefaultContext = 5 * time.Second
+
+func (u *UserService) CreateUser(ctx context.Context, user *models.User) (*models.UserResponse, error) {
+
+	ctx, cancel := context.WithTimeout(ctx, QueryDefaultContext)
+	defer cancel()
 
 	// validation
 	if len(user.Username) < 6 || user.Email == "" || len(user.Password) < 8 || len(user.FullName) < 8 || len(user.Location) < 8 {
-		return nil, fmt.Errorf("invalid user details")
+		return nil, errs.ErrInvalidUserDetails
 	}
 
 	hashedPassword, err := utils.HashedPassword(user.Password)
 	if err != nil {
-		return nil, err
+		return nil, errs.ErrFailedToHashPassword
 	}
 
 	user.Password = hashedPassword
 
 	createdUser, err := u.repo.CreateUser(ctx, user)
 	if err != nil {
-		return nil, err
+		return nil, errs.ErrFailedToCreateUser
 	}
 
-	return createdUser, nil
+	res := &models.UserResponse{
+		ID:        createdUser.ID,
+		Username:  createdUser.Username,
+		Email:     createdUser.Email,
+		FullName:  createdUser.FullName,
+		Location:  createdUser.Location,
+		CreatedAt: createdUser.CreatedAt.Format(time.RFC3339),
+	}
+
+	return res, nil
 }
 
 func (u *UserService) Login(ctx context.Context, req *models.LoginRequest) (*models.LoginResponse, error) {
 
+	ctx, cancel := context.WithTimeout(ctx, QueryDefaultContext)
+	defer cancel()
+
 	if req.Email == "" || req.Password == "" {
-		return &models.LoginResponse{}, fmt.Errorf("email or password cannot be empty")
+		return &models.LoginResponse{}, errs.ErrEmailPasswordRequired
 	}
 
 	user, err := u.repo.GetUserByEmail(ctx, req.Email)
 	if err != nil {
-		if errors.Is(err, store.ErrUserNotFound) {
-			return &models.LoginResponse{}, fmt.Errorf("user not found")
+		if errors.Is(err, errs.ErrUserNotFound) {
+			return &models.LoginResponse{}, errs.ErrUserNotFound
 		}
-		return &models.LoginResponse{}, err
+		return &models.LoginResponse{}, fmt.Errorf("failed to retrieve user: %w", err)
 	}
 
 	if err := utils.CompareHashedPassword(user.Password, req.Password); err != nil {
-		return &models.LoginResponse{}, fmt.Errorf("invalid credentials")
+		return &models.LoginResponse{}, errs.ErrInvalidCredentials
 	}
 
 	claims := jwt.MapClaims{
@@ -77,16 +95,25 @@ func (u *UserService) Login(ctx context.Context, req *models.LoginRequest) (*mod
 
 	token, err := u.app.JwtAUth.GenerateToken(claims)
 	if err != nil {
-		return &models.LoginResponse{}, fmt.Errorf("failed to generate token")
+		if errors.Is(err, errs.ErrFailedToGenToken) {
+			return &models.LoginResponse{}, errs.ErrFailedToGenToken
+		}
+		return &models.LoginResponse{}, fmt.Errorf("problem generating token: %w", err)
 	}
 
 	refreshToken, err := u.app.JwtAUth.GenerateRefreshToken()
 	if err != nil {
-		return &models.LoginResponse{}, fmt.Errorf("failed to generate refresh token")
+		if errors.Is(err, errs.ErrFailedToGenRefreshToken) {
+			return &models.LoginResponse{}, errs.ErrFailedToGenRefreshToken
+		}
+		return &models.LoginResponse{}, fmt.Errorf("problem generating refresh token: %w", err)
 	}
 
 	if err := u.repo.StoreRefreshToken(ctx, user.ID, refreshToken, time.Now().Add(u.app.AppConfig.AuthConfig.RefreshTokenExp)); err != nil {
-		return &models.LoginResponse{}, fmt.Errorf("failed to store refresh token")
+		if errors.Is(err, errs.ErrFailedToStoreToken) {
+			return &models.LoginResponse{}, errs.ErrFailedToStoreToken
+		}
+		return &models.LoginResponse{}, fmt.Errorf("problem storing refresh token: %w", err)
 	}
 
 	return &models.LoginResponse{ID: user.ID, Username: user.Username, Token: token, RefreshToken: refreshToken}, nil
@@ -94,12 +121,15 @@ func (u *UserService) Login(ctx context.Context, req *models.LoginRequest) (*mod
 
 func (u *UserService) UserProfile(ctx context.Context, username string) (*models.UserResponse, error) {
 
+	ctx, cancel := context.WithTimeout(ctx, QueryDefaultContext)
+	defer cancel()
+
 	user, err := u.repo.GetUserByUsername(ctx, username)
 	if err != nil {
-		if errors.Is(err, store.ErrUserNotFound) {
-			return &models.UserResponse{}, fmt.Errorf("user not found")
+		if errors.Is(err, errs.ErrUserNotFound) {
+			return &models.UserResponse{}, errs.ErrUserNotFound
 		}
-		return &models.UserResponse{}, err
+		return &models.UserResponse{}, fmt.Errorf("failed to retrieve user: %w", err)
 	}
 	return &models.UserResponse{
 		ID:        user.ID,
@@ -113,13 +143,15 @@ func (u *UserService) UserProfile(ctx context.Context, username string) (*models
 
 func (u *UserService) Refresh(ctx context.Context, refreshToken string) (string, error) {
 
+	ctx, cancel := context.WithTimeout(ctx, QueryDefaultContext)
+	defer cancel()
+
 	userId, err := u.repo.ValidateRefreshToken(ctx, refreshToken)
 	if err != nil || userId == "" {
-
-		if errors.Is(err, store.ErrTokenNotFound) {
-			return "", fmt.Errorf("refresh token not found")
+		if errors.Is(err, errs.ErrUserNotFound) {
+			return "", fmt.Errorf("user not found")
 		}
-		return "", fmt.Errorf("invalid refresh token")
+		return "", fmt.Errorf("invalid user details: %w", err)
 	}
 
 	// Generate new JWT
@@ -134,8 +166,65 @@ func (u *UserService) Refresh(ctx context.Context, refreshToken string) (string,
 
 	newToken, err := u.app.JwtAUth.GenerateToken(claims)
 	if err != nil {
-		return "", fmt.Errorf("failed to generate new token")
+		return "", errs.ErrFailedToGenToken
 	}
 
 	return newToken, nil
+}
+
+func (u *UserService) UpdateProfile(ctx context.Context, req *models.User, id string) (string, error) {
+
+	ctx, cancel := context.WithTimeout(ctx, QueryDefaultContext)
+	defer cancel()
+
+	if req.Username == "" || len(req.Username) < 4 || req.Email == "" || req.FullName == "" || len(req.FullName) < 6 || req.Location == "" || len(req.Location) < 6 {
+		return "", errs.ErrInvalidUserDetails
+	}
+
+	if err := u.repo.UpdateUser(ctx, req, id); err != nil {
+		return "", errs.ErrFailedToUpdateUser
+	}
+
+	return "user updated successfully", nil
+}
+
+func (u *UserService) ChangePassword(ctx context.Context, req *models.PasswordUpdateRequest, id string) (string, error) {
+
+	ctx, cancel := context.WithTimeout(ctx, QueryDefaultContext)
+	defer cancel()
+
+	if req.OldPassword == "" || len(req.OldPassword) < 8 || req.ConfirmPassword == "" || len(req.ConfirmPassword) < 8 || req.NewPassword == "" || len(req.NewPassword) < 8 {
+		return "", errs.ErrInvalidPassword
+	}
+
+	existingUser, err := u.repo.GetUserById(ctx, id)
+	if err != nil {
+		if errors.Is(err, errs.ErrUserNotFound) {
+			return "", errs.ErrUserNotFound
+		}
+		return "", fmt.Errorf("failed to retrieve user: %w", err)
+	}
+
+	if err := utils.CompareHashedPassword(existingUser.Password, req.OldPassword); err != nil {
+		return "", errs.ErrInvalidPassword
+	}
+
+	if req.NewPassword != req.ConfirmPassword {
+		return "", errs.ErrPasswordsDoNotMatch
+	}
+
+	if req.OldPassword == req.NewPassword {
+		return "", errs.ErrPasswordCannotBeSame
+	}
+
+	hashedPassword, err := utils.HashedPassword(req.NewPassword)
+	if err != nil {
+		return "", errs.ErrFailedToHashPassword
+	}
+
+	if err := u.repo.ChangePassword(ctx, hashedPassword, id); err != nil {
+		return "", errs.ErrFailedToChangePassword
+	}
+
+	return "password changed successfully", nil
 }
